--- a/stylelisting.css
+++ b/stylelisting.css
@@ -1,6 +1,73 @@
 .booklist{
+   width: 400px;
+   display: grid;
+   padding: 10px;
+   margin: 20px auto; 
+   grid-template-columns: 1fr 1fr 1fr;
+   column-gap: 50px;
+   row-gap: 40px;
+   justify-content: center;
+}
+.Book-Grid{
+    border-radius: 10px;
     display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+        
+}
+.Book-Grid button{
+    width: 100px;
+    height: 40px;
+   margin-top: 12px;
+   border-radius: 10px;
+   border: none;
+   padding: 10px;
+   font-size: 15px;
+   align-self: center;
+   cursor: pointer;
+   background-color: #fec63d;
+}
+footer{
+    display: flex;
     justify-content: center;
+    gap:10px;
+}
+.circlebtn{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #dfbc63;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    cursor: pointer;
+}
+.dots{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    font-size: 26px;
+}
+body{
+    background-color: #5ab2a6;
+}
+h6{
+    font-size: 17px;
+    background-color: #fec63d;
+    margin-top: -5px;
+}
+.search-bar{
+    width: 200px;
+    height: 25px;
+    padding: 10px;
+    border-radius: 20px;
+    border: #5ab2a6;
+    background-color: #eaca79;
+    
+
 }
