--- a/dashboard.css
+++ b/dashboard.css
@@ -129,6 +129,15 @@ body {
     background-color: #48948c;
 }
 
+.fav-btn i {
+    font-size: 24px;
+    color: gray; 
+  }
+  
+  .fav-btn.active i {
+    color: red; 
+  }
+
 span {
     display: flex;
     flex-direction: row;
