--- a/account.css
+++ b/account.css
@@ -24,10 +24,16 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 90%;
     border: 3px solid white;
+}
+input[type='file']{
+    margin-left: 650px;
+
+
+
 }
 div{
     text-align: left;
