--- a/home.css
+++ b/home.css
@@ -45,6 +45,7 @@
     font-weight: 700;
     text-transform: uppercase;
     margin-top: 60px;
+    background-color: #dcb687;
     
 }
 
@@ -203,7 +204,7 @@
 }
 
 
-.slider-container {
+/* .slider-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -211,22 +212,45 @@
     position: relative;
     margin: auto;
     overflow: hidden;
-}
+} */
 
-.slider {
+.slider-container{
     display: flex;
-    gap: 25px;
+    align-items: center;
+    position: relative;
+    width: 90%;
+    margin: 20px auto;
+}
+.books-container{
+    display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
+    gap: 20px;
+    padding: 20px;
+    width: 100%;
+}
+.book-card{
+    min-width: 150px;
+    flex-shrink: 0;
+    text-align: center;
+    background-color: antiquewhite;
+    border-radius: 8px;
+    padding: 10px;
+}
+.book-card img{
+    width: 100%;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+}
+.book-card img:hover{
+    transform: scale(1.05);
 }
 
 .slider::-webkit-scrollbar {
     display: none;
 }
 
-.book {
+.books-container {
     background: white;
     border-radius: 10px;
     padding: 10px;
@@ -243,25 +267,10 @@
     transition: transform 0.3s;
 }
 
-.book img {
+.books-container img {
     width: 100%;
     height: 250px;
     border-radius: 5px;
-}
-
-.borrow-btn {
-    background-color: #5ab2a6;
-    border: none;
-    color: white;
-    padding: 5px 10px;
-    margin-top: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background 0.3s;
-}
-
-.borrow-btn:hover {
-    background-color: #5ab2a6;
 }
 
 .nav-btn {
