--- a/stylelisting.css
+++ b/stylelisting.css
@@ -58,10 +58,31 @@ footer{
 body{
     background-color: rgb(243, 243, 223);
 }
-
-.search-bar{
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    border: 10px;
+    padding: 10px;
+    width:40%;
+    margin-top: 0px;
+    background-color:none;
+}
+.search select{
+    background-color:  #fec63d;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    color: beige;
     margin-top: 10px;
-    width: 200px;
+
+}
+.search-bar{
+    flex: 1;
+    border:none;
+    margin-top: 10px;
+    width: 150px;
     height: 40px;
     padding: 10px;
     border-radius: 10px;
