--- a/css/signup.css
+++ b/css/signup.css
@@ -5,14 +5,25 @@
 }
 
 body {
-    background-color: #5ab2a6;
+    background-image: url(/images/libraryback.jpg);
+    background-size: cover;
+    background-position: center;
+    background-color: #65081F;
     font-family: "Lucida Console", "Courier New", monospace;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
+.glass-box{
+    background: rgba(188, 156, 156, 0.2);
+    border-radius: 15px;
+    padding: 40px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    max-width: 400px;
+    text-align: center;
+}
 #signup-container {
     text-align: center;
     max-width: 400px;
@@ -20,7 +31,7 @@ body {
 }
 
 #welcome {
-    color: #fec63d;
+    color: #65081F;
     font-size: 30px;
     font-weight: bolder;
     margin-bottom: 30px;
@@ -50,12 +61,12 @@ body {
 }
 
 #agree a {
-    color: #fec63d;
+    color: #65081F;
     text-decoration: none;
 }
 
 #signup-button {
-    background-color: #fec63d;
+    background-color: #65081F;
     color: white;
     font-weight: bold;
     padding: 10px 30px;
@@ -63,6 +74,12 @@ body {
     border-radius: 50px;
     cursor: pointer;
     margin-top: 10px;
+}
+#signup-button:hover{
+    border: 2px solid #65081F ;
+    background-color: transparent;
+    color: #65081F;
+    transition: 0.3s ease;
 }
 
 #acc {
@@ -72,7 +89,7 @@ body {
 }
 
 #acc a {
-    color: #fec63d;
+    color: #65081F;
     text-decoration: none;
 }
 
