--- a/css/stylelisting.css
+++ b/css/stylelisting.css
@@ -27,7 +27,7 @@
    font-size: 15px;
    align-self: center;
    cursor: pointer;
-   background-color:#5ab2a6;
+   background-color:#65081F;
 }
 footer{
     display: flex;
@@ -69,50 +69,63 @@ body{
     background-color:none;
 }
 .search select{
-    background-color:  #fec63d;
+    background-color:  #65081F;
     border-radius: 5px;
     border: none;
     padding: 10px;
     font-size: 16px;
     color: beige;
-    margin-top: 10px;
+    margin-top: 70px;
 
 }
 .search-bar{
     flex: 1;
     border:none;
-    margin-top: 10px;
+    margin-top:70px;
     width: 150px;
     height: 40px;
     padding: 10px;
     border-radius: 10px;
-    border: #5ab2a6;
-    background-color:#5ab2a6;
+    border: #eab9c5;
+    background-color:#edbac7;
     
 
 }
 input::placeholder{
     color:antiquewhite;
 }
-.header{
-    margin-top: -7px;
+
+.navbar{
+    margin-top: -10px;
+    margin-left:-10px;
+    position: fixed;
+    width: 100%;
+    z-index: 5;
     display: flex;
-    gap: 20px;
-    background: #5ab2a6;
-    align-self: center;
+    justify-content: space-between;
     align-items: center;
-    padding: 15px 40px;
-    border-radius: 10px;
-    
+    background: #65081F;   
+    padding: 10px; 
 }
-.header img{
-    width: 28px;
-    height: 28px;
-    cursor: pointer;
+.nav{
+    display: flex;
+    gap: 30px;
+   
 }
-.header a{
+.nav a{
     color: white;
-    font-size: 18px;
     text-decoration: none;
-    font-weight: 500;
+    font-size: 18px;
+    padding: 10px 18px;
+    
+    border-radius: 20px;
+    transition: 0.3s ease;
+}
+.nav a:hover{
+    color: black;
+    background: #FFC048;
+
+} 
+.ourname{
+    color:white;
 }
