--- a/css/Contact.css
+++ b/css/Contact.css
@@ -9,31 +9,39 @@ body {
     background-color: #f9f9f9;
 }
 
-.navbar {
+.navbar{
+    margin-top: -50px;
+    padding: 40px;
+    position: fixed;
+    width: 100%;
+    z-index: 5;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: flex-end;
-    padding: 20px 40px;
-    background-color: #65081F;
-    gap: 30px;
+    background: #65081F;   
+    padding: 20px; 
 }
-
-.navbar a {
+.nav{
+    display: flex;
+    gap: 30px;
+   
+}
+.nav a{
     color: white;
     text-decoration: none;
     font-size: 18px;
-    font-weight: 500;
-    transition: color 0.3s;
-    padding: 8px 12px;
-    border-radius: 4px;
+    padding: 10px 18px;
+    
+    border-radius: 20px;
+    transition: 0.3s ease;
 }
+.nav a:hover{
+    color: black;
+    background: #FFC048;
 
-.navbar a:hover {
-    color: #FFA500;
-}
-
-.navbar a.active {
-    background-color: rgba(255, 255, 255, 0.2);
+} 
+.ourname{
+    color:white;
 }
 
 .container.contact {
@@ -47,6 +55,7 @@ body {
 }
 
 .container.contact h2 {
+    margin-top:30px;
     font-size: 2.5rem;
     font-weight: 700;
     color: #65081F;
